-
Bug
-
Resolution: Done
-
P4: Low
-
5.0.0
-
None
-
0c368a5e88eaeafe17b862ac90bc3852d04ea811
See tst_qquickmousearea::hoverVisible.
For Gerrit Dashboard: QTBUG-24282 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
19963,1 | Fix MouseArea autotest | master | qt/qtdeclarative | Status: ABANDONED | 0 | 0 |
29857,2 | Report correct mouse position when made visible with hoverEnabled. | master | qt/qtdeclarative | Status: MERGED | +2 | 0 |