Report correct mouse position when made visible with hoverEnabled.

Task-number: QTBUG-24282
Change-Id: I778b2db18c28e2b33690531ec19eb24ecf444a38
Reviewed-by: Martin Jones <martin.jones@nokia.com>